# whatsappgateway

./: .config.yaml  CHANGELOG.md  Dockerfile  pyproject.toml
.github/workflows/: docker-image.yaml
tests/: test_whatsappcloudapigateway.py
whatsappcloudapigateway/: config.py  logger.py  routes.py
