[tool.poetry]
name = "WhatsappCloudAPIGateway"
version = "0.1.0"
description = ""
authors = ["אהרן הורן <h98aaron@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
driconfig = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
