[tool.poetry]
name = "WhatsappCloudAPIGateway"
version = "0.1.1"
description = ""
authors = ["אהרן הורן <h98aaron@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
driconfig = "^0.2.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.1"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "whatsappcloudapigateway/__init__.py:__version__"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
