[tool.poetry]
name = "WhatsappCloudAPIGateway"
version = "0.1.7"
description = ""
authors = ["אהרן הורן <h98aaron@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
driconfig = "^0.2.0"
uvicorn = "^0.17.6"
aiohttp = "^3.8.1"
fastapi = "^0.78.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.7"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "whatsappcloudapigateway/__init__.py:__version__"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
